--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
 	</dependencies>
 
 	<build>
+	<finalName>estoque-rest</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
