--- a/pom.xml
+++ b/pom.xml
@@ -63,10 +63,23 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>build-helper-maven-plugin</artifactId>
+			<version>3.2.0</version>
+			<type>maven-plugin</type>
+		</dependency>
 	</dependencies>
 
+	<scm>
+		<url>{HTTP_URL_GIT_REPOSITORY}</url> <!-- URL HTTP de clone do projeto -->
+		<connection>scm:git:{HTTP_URL_GIT_REPOSITORY}</connection> <!-- URL HTTP de clone do projeto -->
+		<developerConnection>scm:git:{HTTP_URL_GIT_REPOSITORY}</developerConnection> <!-- URL HTTP de clone do projeto -->
+		<tag>@{project.version}</tag>
+	</scm>
+
 	<build>
-	<finalName>estoque-rest</finalName>
+		<finalName>estoque-rest</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -78,6 +91,17 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+				<configuration>
+					<tagNameFormat>@{project.version}</tagNameFormat>
+					<checkModificationExcludes>
+						<checkModificationExclude>pom.xml</checkModificationExclude>
+					</checkModificationExcludes>
 				</configuration>
 			</plugin>
 		</plugins>
