--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<build.number>SNAPSHOT</build.number>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -63,20 +64,22 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.codehaus.mojo</groupId> -->
-<!-- 			<artifactId>build-helper-maven-plugin</artifactId> -->
-<!-- 			<version>3.2.0</version> -->
-<!-- 			<type>maven-plugin</type> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.codehaus.mojo</groupId> -->
+		<!-- <artifactId>build-helper-maven-plugin</artifactId> -->
+		<!-- <version>3.2.0</version> -->
+		<!-- <type>maven-plugin</type> -->
+		<!-- </dependency> -->
 	</dependencies>
 
-<!-- 	<scm> -->
-<!-- 		<url>{HTTP_URL_GIT_REPOSITORY}</url> URL HTTP de clone do projeto -->
-<!-- 		<connection>scm:git:{HTTP_URL_GIT_REPOSITORY}</connection> URL HTTP de clone do projeto -->
-<!-- 		<developerConnection>scm:git:{HTTP_URL_GIT_REPOSITORY}</developerConnection> URL HTTP de clone do projeto -->
-<!-- 		<tag>@{project.version}</tag> -->
-<!-- 	</scm> -->
+	<!-- <scm> -->
+	<!-- <url>{HTTP_URL_GIT_REPOSITORY}</url> URL HTTP de clone do projeto -->
+	<!-- <connection>scm:git:{HTTP_URL_GIT_REPOSITORY}</connection> URL HTTP 
+		de clone do projeto -->
+	<!-- <developerConnection>scm:git:{HTTP_URL_GIT_REPOSITORY}</developerConnection> 
+		URL HTTP de clone do projeto -->
+	<!-- <tag>@{project.version}</tag> -->
+	<!-- </scm> -->
 
 	<build>
 		<finalName>estoque-rest-${project.version}</finalName>
@@ -93,17 +96,36 @@
 					</excludes>
 				</configuration>
 			</plugin>
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
-<!-- 				<artifactId>maven-release-plugin</artifactId> -->
-<!-- 				<version>2.5.3</version> -->
-<!-- 				<configuration> -->
-<!-- 					<tagNameFormat>@{project.version}</tagNameFormat> -->
-<!-- 					<checkModificationExcludes> -->
-<!-- 						<checkModificationExclude>pom.xml</checkModificationExclude> -->
-<!-- 					</checkModificationExcludes> -->
-<!-- 				</configuration> -->
-<!-- 			</plugin> -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<!-- http://maven.apache.org/plugins/maven-compiler-plugin/ -->
+					<source>1.8</source>
+					<target>1.8</target>
+					<manifest>
+                    <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                </manifest>
+                <archive>
+                    <manifestEntries>
+                        <Specification-Title>${project.name}</Specification-Title>
+                        <Specification-Version>${project.version}</Specification-Version>
+                        <Implementation-Version>${build.number}</Implementation-Version>
+                    </manifestEntries>
+                </archive>
+				</configuration>
+			</plugin>
+			<!-- <plugin> -->
+			<!-- <groupId>org.apache.maven.plugins</groupId> -->
+			<!-- <artifactId>maven-release-plugin</artifactId> -->
+			<!-- <version>2.5.3</version> -->
+			<!-- <configuration> -->
+			<!-- <tagNameFormat>@{project.version}</tagNameFormat> -->
+			<!-- <checkModificationExcludes> -->
+			<!-- <checkModificationExclude>pom.xml</checkModificationExclude> -->
+			<!-- </checkModificationExcludes> -->
+			<!-- </configuration> -->
+			<!-- </plugin> -->
 		</plugins>
 	</build>
 
